# ghoststorm

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release-drafter.yml  release.yml  stale.yml
config/: default.yaml  user_config.yaml
config/presets/: captcha_form.yaml  contact_form.yaml  login_form.yaml  social_boost.yaml  zefoy.yaml
config/presets/custom/: test-custom-preset.yaml
config/profiles/: aggressive.yaml  balanced.yaml  stealth.yaml
data/algorithms/: metadata.json  tiktok_gorgon.py
data/behavior/: video_watch_patterns.json
data/blacklists/: default.txt
data/evasion/: stealth_template.js
data/fingerprints/: generated.json
data/flows/: 0942c3d5-578b-450f-83b4-9e050be63502.json  0a53c7af-3ea6-44e8-82b7-cc3f36b9f16e.json  0afc19aa-b372-473c-8ac7-871b123c0a4f.json  0eac4ba4-7a94-4843-bd4b-da3db08e283a.json  13911087-a8e7-4de4-b840-0610bf82d30f.json  16343a2d-16a8-4f7c-a138-c8309d5e0f49.json  26880d3b-2879-457c-86e6-41a652e0251a.json  2df82d0a-8523-42a0-8b05-c3f8e894c330.json  3042a4c2-8da5-4c25-9e6b-53bd1ab51ccf.json  3492d02c-67dd-4a47-9116-2c33606a7bfd.json  4c1f53b3-8fcf-4292-a79a-5e4d4e422e24.json  5f1e1aff-269d-4022-8ac6-6760f8a0eaa0.json  6790c93e-13b3-42e0-9ad2-81f421a3ac62.json  6c21615f-553c-4975-9dfc-a25fd0e8bca4.json  6e4cd915-3d55-4338-a907-41b579890a5b.json  71f9eb05-d382-4817-827a-e6cf0fea9a7a.json  7201502b-61af-445a-8eac-ceed20b2441f.json  760ac3ee-b0ac-44b9-89f9-389c628b530a.json  7b7329cf-e4eb-436d-ad27-1f07d3d7c4d5.json  7c3743ed-b8bc-403d-b120-d88aa60d8fbf.json  91b5f1ea-553e-44a2-9c37-57186308934d.json  92a128a1-6b18-4418-a78c-0bb3a08d78d4.json  99bffd6a-fa1b-46a8-8c45-159c6790e572.json  9bad4920-4084-4998-a22c-8a19aa226b71.json  ac9c204d-e841-40dd-beac-a071be604c43.json  adadb337-1a97-4c40-8bac-d774918c8889.json  adfa9ed5-039d-4397-baea-72cebda9fa27.json  b55efdb5-beeb-4ff4-9a1a-2afa5c314728.json  b60867f7-215f-428f-92c3-241bf8b99f2c.json  b758aa86-22ed-4e3e-b215-fc17dd309bf2.json  ba81258a-85f2-4d35-9768-18a58cea4c68.json  badaf5e8-014a-417e-b2e7-83100638e19f.json  bdc9c0e9-1455-4f76-b499-3aa99043d57a.json  c45d4376-9582-4712-bf4c-65ae236517eb.json  cb22e670-3e80-4772-a17f-6b35362f57f7.json  d2e2d67c-d1ae-4dce-bca0-5abdaeabdb1b.json  d8b0c9fa-a874-46f6-8a61-3fc6c58df42a.json  df84acb9-f606-4145-93e6-a0a0f0236a53.json  e0e484f6-12ae-460d-9a3c-46860eaf574b.json  e49fb2d7-eff4-421e-a286-9990291dd7c5.json  (+6 more)
data/proxies/: aggregated.txt  alive_proxies.txt  proxies.txt
data/referrers/: direct.txt  search_engines.txt  social_media.txt  video_platforms.txt
data/screen_sizes/: android-tablet.txt  android.txt  desktop.txt  ipad.txt  iphone.txt  ipod.txt  microsoft-phones.txt  nintendo.txt  ps3.txt  ps4.txt  psvita.txt  tv.txt
data/user_agents/: android-tablet.txt  android.txt  generated.txt  instagram_inapp.txt  ipad.txt  iphone.txt  ipod.txt  linux.txt  mac.txt  microsoft-phones.txt  microsoft-tablets.txt  tiktok_inapp.txt  windows.txt  youtube_inapp.txt
docker/: entrypoint.sh
docs/: ai-control.md  algorithms.md  api-reference.md  api.md  architecture.md  contributing.md  data.md  engine.md  getting-started.md  index.md  proxies.md  quickstart.md  settings.md  tasks.md  tech-stack.md  troubleshooting.md  zefoy.md
examples/: README.md  basic_visit.py  batch_visits.py  flow_recording.py  llm_automation.py  stealth_config.py  with_proxies.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/architecture/: index.html
site/contributing/: index.html
site/quickstart/: index.html
site/search/: search_index.json
src/ghoststorm/: __init__.py  __main__.py
src/ghoststorm/api/: __init__.py  app.py  schemas.py  websocket.py
src/ghoststorm/api/routes/: __init__.py  algorithms.py  assistant.py  config.py  data.py  docs.py  dom.py  engine.py  flows.py  health.py  llm.py  metrics.py  proxies.py  tasks.py  zefoy.py
src/ghoststorm/api/static/: index.html
src/ghoststorm/cli/: __init__.py  app.py
src/ghoststorm/cli/commands/: proxy.py  visit.py
src/ghoststorm/core/: __init__.py
src/ghoststorm/core/assistant/: __init__.py  agent.py  sandbox.py
src/ghoststorm/core/config/: __init__.py  credentials.py
src/ghoststorm/core/dom/: __init__.py  analyzer.py  clickable.py  models.py  selector.py  service.py
src/ghoststorm/core/engine/: __init__.py  browser_pool.py  circuit_breaker.py  orchestrator.py  pool.py  scheduler.py
src/ghoststorm/plugins/: __init__.py
src/ghoststorm/runners/: __init__.py  high_volume_runner.py
tests/: __init__.py  conftest.py  playwright.config.ts  test_dom.py  test_llm.py  test_watchdog.py  test_watchdog_api.py  test_wizard_flows.py
tests/e2e/: test_full_session.py  test_tiktok_full_flow.py  test_tiktok_real_views.py
tests/e2e/api/: __init__.py  conftest.py  test_algorithms_e2e.py  test_assistant_e2e.py  test_config_e2e.py  test_data_e2e.py  test_dextools_e2e.py  test_dom_e2e.py  test_engine_e2e.py  test_flows_e2e.py  test_health_e2e.py  test_llm_e2e.py  test_metrics_e2e.py  test_proxies_e2e.py  test_tasks_e2e.py  test_websocket_e2e.py  test_zefoy_e2e.py
tests/e2e/journeys/: __init__.py  conftest.py  test_dextools_campaign.py  test_flow_record_playback.py  test_llm_assisted_automation.py  test_tiktok_campaign.py
tests/e2e/real/: __init__.py  test_browser_real.py  test_ollama_integration.py  test_proxy_scrape_real.py
tests/e2e/ui/: __init__.py  conftest.py
tests/integration/: test_api_tasks.py  test_automation_pipeline.py
tests/pytest_plugins/: __init__.py  markers.py  mock_services.py
tests/unit/api/: test_schemas.py  test_websocket.py
(+157 files in other folders)
