[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghoststorm"
version = "1.0.0"
description = "Production-grade, plugin-based browser automation platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "devbyteai" }
]
keywords = [
    "browser-automation",
    "web-scraping",
    "traffic-generation",
    "load-testing",
    "anti-detection",
    "playwright",
    "selenium",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    # Browser automation
    "patchright>=1.0.0",
    "camoufox>=0.4.0",
    "playwright>=1.49.0",

    # Fingerprinting
    "browserforge>=1.2.3",

    # CLI
    "typer[all]>=0.12.0",
    "rich>=13.9.0",

    # Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",

    # Plugin system
    "pluggy>=1.5.0",

    # Async
    "aiohttp>=3.11.0",
    "aiofiles>=24.1.0",

    # Logging & metrics
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",

    # Proxy
    "python-socks[asyncio]>=2.5.0",

    # Data
    "orjson>=3.10.0",
    "aiosqlite>=0.20.0",

    # GeoIP (identity coherence)
    "geoip2fast>=1.2.0",

    # Scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # System monitoring
    "psutil>=6.0.0",

    # API (for future GUI)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
captcha = [
    "2captcha-python>=1.5.0",
    "anticaptchaofficial>=1.0.0",
]
gui = [
    "nicegui>=2.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
all = [
    "ghoststorm[captcha,gui,dev]",
]

[project.scripts]
ghoststorm = "ghoststorm.cli.app:main"
ps = "ghoststorm.cli.app:main"

[project.urls]
Homepage = "https://github.com/devbyteai/ghoststorm"
Documentation = "https://github.com/devbyteai/ghoststorm#readme"
Repository = "https://github.com/devbyteai/ghoststorm"
Issues = "https://github.com/devbyteai/ghoststorm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ghoststorm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/data",
    "/config",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict=
    "ARG001", # unused function argument (intentional for callbacks/interfaces)
    "ARG002", # unused method argument (intentional for callbacks/interfaces)
    "ARG005", # unused lambda argument
    "SIM117", # multiple with statements (readability preference)
    "SIM105", # use contextlib.suppress (readability preference)
    "SIM102", # collapsible if (readability preference)
    "PTH123", # use Path.open() (style preference)
    "RUF012", # mutable class attributes (intentional for defaults)
    "B904",   # raise from within except (not always needed)
    "B027",   # empty method in abstract class (intentional)
    "RUF001", # ambiguous unicode (intentional strings)
    "RUF003", # ambiguous comment (intentional)
    "RUF006", # dangling asyncio task
    "RUF059", # unused unpacked variable
    "E722",   # bare except (sometimes needed)
    "E741",   # ambiguous variable name
    "E402",   # module level import not at top
    "PTH111", # os.path.expanduser
    "SIM108", # ternary operator
    "SIM113", # enumerate instead of manual counter
    "F401",   # unused import (sometimes intentional re-exports)
]

[tool.ruff.lint.isort]
known-first-party = ["ghoststorm"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_configs = false
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "patchright.*",
    "camoufox.*",
    "browserforge.*",
    "pluggy.*",
    "sqlalchemy.*",
    "aiosqlite.*",
    "structlog.*",
    "aiohttp.*",
    "aiofiles.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "real: marks tests that use real services (requires --run-real flag)",
    "mock: marks tests using mocked services",
    "api: marks API endpoint tests",
    "ui: marks UI/Playwright tests",
    "ollama: marks tests requiring Ollama",
    "docker: marks tests requiring Docker",
    "browser: marks tests requiring browser engine",
    "websocket: marks WebSocket tests",
    "flow: marks Flow Recorder tests",
    "assistant: marks AI Assistant tests",
]

[tool.coverage.run]
source = ["src/ghoststorm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
